Version 2.02.188 - 
==================================
  Support interruption when wipping LVs.
  Add configure --enable-editline support as an alternative to readline.
  Zero pool metadata on allocation (disable with allocation/zero_metadata=0).
  Failure in zeroing or wiping will fail command (bypass with -Zn, -Wn).
  Fix support for lvconvert --repair used by foreign apps (i.e. Docker).
  Support interruption for bcache waiting.
  Fix bcache when device has too many failing writes.
  Fix bcache waiting for IO completion with failing disks.
  Configure use own python path name order to prefer using python3.
  Enhance reporting and error handling when creating thin volumes.
  Use revert_lv() on reload error path after vg_revert().
  Improve estimation of needed extents when creating thin-pool.
  Use extra 1% when resizing thin-pool metadata LV with --use-policy.
  Enhance --use-policy percentage rounding.
  Switch code base to use flexible array syntax.
  Preserve uint32_t for seqno handling.
  Switch from mmap to plain read when loading regular files.
  Fix running out of free buffers for async writing for larger writes.
  Fix conversion to raid from striped lagging type.
  Fix conversion to 'mirrored' mirror log with larger regionsize.
  Fix support for lvconvert --repair used by foreign apps (i.e. Docker).

Version 2.02.187 - 24th March 2020
==================================
  Avoid running cache input arg validation when creating vdo pool.
  Prevent raid reshaping of stacked volumes.
  Ensure minimum required region size on striped RaidLV creation.
  Fix resize of thin-pool with data and metadata of different segtype.
  Fix splitting mirror leg in cluster.
  Fix activation order when removing merged snapshot.
  Add support for DM_DEVICE_GET_TARGET_VERSION into device_mapper.
  Add lvextend-raid.sh to check on RaidLV extensions synchronization.
  Fix lvmetad shutdown and avoid lenghty timeouts when rebooting system.